Add main operations: current season and teams

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
 
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://xapaya:LcDn7lrChVCtH82u@xapacluster.6onaa.mongodb.net/?retryWrites=true&w=majority
+      database: porrappdb
+
+app:
+  football-data:
+    base-url: https://api.football-data.org/v4
+    api-token: 43f78b17ba314f66854a7fab1120fac9
+    leagues:
+      laliga: PD
